--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
         <div class="details">
             <h1>Kundan Kumar</h1>
-            <h3>Becoming Software Engineer</h3>
+            <h3>I am Software Engineer</h3>
         </div>
     </div>
   </body>
